--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   overflow-x: hidden; }
 
-p, ul {
+p, ul, ol {
   font-size: 20px; }
 
 p.small {
